feat: 특정 재고를 가지는 약국 select